L3/S1/Info/Compil/TD2/mini-python/tests/good/bool5.py
print(True)
print(False)
print(True and False)
print(True or False)
