L3/S1/Info/Compil/TD2/mini-python/tests/bad/bool1.py
print(1<2 and len(1))
